- Glacier.getIceSpeed(x,z) calls getIceThickness which does interpolation

MIGRATE TO PHETCOMMON:
- DoubleSpinner
- SliderOnlyLayoutStrategy
- HorizontalLayoutStrategy

CLEANUP:
- setPickable(false) on non-interactive nodes
- rescale image files to minimize file size
- disable all debug output
- optimize memory management by reusing mutable objects


DONE:
5/9/08 - organize imports
5/9/08 - make ice thickness tool display "?" while it's being dragged
******* 0.00.19 (21308)
5/9/08 - add drop constraints for all other tools
******* 0.00.18 (21304)
5/9/08 - add drop constraints to tracer flag model, snap to legal position
5/8/08 - call cleanup on all tools and tool nodes when they are trashed
5/8/08 - reduce number of calls to Glacier.getSurfaceElevation in IceNode
5/8/08 - use same method of computation and precision for all geometry in IceNode
5/8/08 - remove ice thickness grid from public interface of Glacier model
5/8/08 - switch to double precision for computing geometry of surface below ELA
5/8/08 - make tools shrink to the center of the trash can
******** 0.00.17 (21262)
5/6/08 - first pass at making tools that are dropped in trash disappear by shrinking them
5/6/08 - write test program demonstrating use of PActivity to shrink tools that are dropped in trash
5/6/08 - change size of ice perspective to more closely match valley width in image
5/6/08 - add geometry for ice surface below ELA
5/6/08 - fix geometry for ice surface, it was looping through ice thickness samples in wrong upvalley order
5/1/08 - create preliminary image for "illegal drop location" cursor
5/1/08 - add textures and nodes for ice surface above and below ELA (no geometry added yet)
5/1/08 - add textures for ice cross-section and surface
5/1/08 - delete dirt texture, no longer used and unknown licensing
5/1/08 - add icons for View check boxes (equilibrium line, ice flow, coordinates)
5/1/08 - fix semantics of AbstractTool.isDragging, it was reversed