@@ -88,6 +88,7 @@ CLEANUP:
 
 
 DONE:
+5/12/08 - change valley formula to better match the elevation left of the headwall in the image
 5/9/08 - organize imports
 5/9/08 - make ice thickness tool display "?" while it's being dragged
 ******* 0.00.19 (21308)
